--- a/docker/images/php/Dockerfile
+++ b/docker/images/php/Dockerfile
@@ -1,4 +1,6 @@
-FROM php:8.2-fpm
+FROM composer:latest AS composer
+
+FROM php:8.2-fpm as base
 
 MAINTAINER CoderYooda <CoderYooda@gmail.com>
 
@@ -13,10 +15,15 @@ RUN apt-get update && apt-get install -y \
 	    libzip-dev \
 	    libmcrypt-dev
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
-ADD php.ini /usr/local/etc/php/conf.d/40-custom.ini
+ADD /docker/images/php/php.ini /usr/local/etc/php/conf.d/sellmo-php.ini
+
+#RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+COPY --from=composer /usr/bin/composer /usr/bin/composer
 
 WORKDIR /application
+
+#RUN chown -R www-data:www-data /application
 
 CMD ["php-fpm"]
