--- a/docker/images/php/Dockerfile
+++ b/docker/images/php/Dockerfile
@@ -1,6 +1,6 @@
 FROM composer:latest AS composer
 
-FROM php:8.2-fpm as base
+FROM php:8.2-fpm as php-base
 
 MAINTAINER CoderYooda <CoderYooda@gmail.com>
 
@@ -17,6 +17,12 @@ RUN apt-get update && apt-get install -y \
 
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
+RUN pecl install -o -f redis \
+&&  rm -rf /tmp/pear \
+&&  docker-php-ext-enable redis
+
+#RUN apt-get install -y nodejs npm
+
 ADD /docker/images/php/php.ini /usr/local/etc/php/conf.d/sellmo-php.ini
 
 #RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -25,5 +31,9 @@ COPY --from=composer /usr/bin/composer /usr/bin/composer
 WORKDIR /application
 
 #RUN chown -R www-data:www-data /application
+
+FROM php-base AS base
+
+WORKDIR /application
 
 CMD ["php-fpm"]
