--- a/docker/nginx/sellmo.conf
+++ b/docker/nginx/sellmo.conf
@@ -1,26 +1,76 @@
+# Global settings
+server_tokens off;
+
 server {
     listen 80;
+    server_name $VIRTUAL_HOST;
 
-    index index.php index.html;
+    location / {
+        return 302 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name $VIRTUAL_HOST;
+
+    ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+
     root /application/public;
+    index index.html;
+
+    gzip on;
+    gzip_disable "msie6";
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+
+    client_max_body_size 32m;
+
+    #$NGINX_REALIP
+
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #$NGINX_RESOLVER
+        include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param X-Time '$request_time';
+        fastcgi_param PHP_ADMIN_VALUE 'expose_php=off';
+        fastcgi_hide_header X-Powered-By;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_intercept_errors on;
     }
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
-    }
-
-    #server_name sellmo.dev;
-    #return 301 https://$host$request_uri;
 }
+
+
+#server {
+#    listen 80;
+#
+#    index index.php index.html;
+#    root /application/public;
+#
+#    location ~ \.php$ {
+#        try_files $uri =404;
+#        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#        fastcgi_pass php:9000;
+#        fastcgi_index index.php;
+#        include fastcgi_params;
+#        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#        fastcgi_param PATH_INFO $fastcgi_path_info;
+#    }
+#    location / {
+#        try_files $uri $uri/ /index.php?$query_string;
+#        gzip_static on;
+#    }
+#
+#    #server_name sellmo.dev;
+#    #return 301 https://$host$request_uri;
+#}
 #server {
     #listen 443;
     #server_name sellmo.dev;
