--- a/docker/nginx/sellmo.conf
+++ b/docker/nginx/sellmo.conf
@@ -14,8 +14,8 @@ server {
     listen 443 ssl http2;
     server_name $VIRTUAL_HOST;
 
-    ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+    ssl_certificate /etc/nginx/certs/docker.loc.crt;
+    ssl_certificate_key /etc/nginx/certs/docker.loc.key;
 
     root /application/public;
     index index.html;
